--- a/src/lang/lang.txt
+++ b/src/lang/lang.txt
@@ -76,3 +76,119 @@ Object가 없다면?
 <toString() 오버라이딩>
 `Object.toString()` 메서드가 클래스 정보와 참조값을 제공하지만 이 정보만으로는 객체의 상태를 적절히 나타내
 지 못한다. 그래서 보통 `toString()` 을 재정의(오버라이딩)해서 보다 유용한 정보를 제공하는 것이 일반적이다.
+
+**구체적인 것에 의존**
+`BadObjectPrinter` 는 구체적인 타입인 `Car` , `Dog` 를 사용한다. 따라서 이후에 출력해야 할 구체적인 클래스가 10개로 늘어나면
+구체적인 클래스에 맞추어 메서드도 10개로 계속 늘어나게 된다. 이렇게 `BadObjectPrinter` 클래스가 구체적인 특정 클래스인
+`Car` , `Dog` 를 사용하는 것을 `BadObjectPrinter` 는 `Car` , `Dog` 에 의존한다고 표현한다.
+
+다행히도 자바에는 **객체의 정보를 사용할 때**, 다형적 참조 문제를 해결해줄 `Object` 클래스와 메서드 오버라이딩 문제
+를 해결해줄 `Object.toString()` 메서드가 있다. (물론 직접 `Object` 와 비슷한 공통의 부모 클래스를 만들어서 해결할 수도 있다.)
+
+추상적인 것에 의존**
+우리가 앞서 만든 `ObjectPrinter` 클래스는 `Car` , `Dog` 같은 구체적인 클래스를 사용하는 것이 아니라, 추상적인
+`Object` 클래스를 사용한다. 이렇게 `ObjectPrinter` 클래스가 `Object` 클래스를 사용하는 것을
+`ObjectPrinter` 클래스가 `Object` 에 클래스에 의존한다고 표현한다.
+
+
+추상적**: 여기서 말하는 추상적이라는 뜻은 단순히 추상 클래스나 인터페이스만 뜻하는 것은 아니다. `Animal` 과
+`Dog` , `Cat` 의 관계를 떠올려보자. `Animal` 같은 부모 타입으로 올라갈수록 개념은 더 추상적이게 되고, `Dog` ,
+`Cat` 과 같이 하위 타입으로 내려갈 수록 개념은 더 구체적이게 된다.
+
+`ObjectPrinter` 의 `print()` 메서드와 전체 구조를 분석해보자.
+**다형적 참조**: `print(Object obj)` , `Object` 타입을 매개변수로 사용해서 다형적 참조를 사용한다.
+`Car` ,`Dog` 인스턴스를 포함한 세상의 모든 객체 인스턴스를 인수로 받을 수 있다.
+
+**메서드 오버라이딩**: `Object` 는 모든 클래스의 부모이다. 따라서 `Dog` , `Car` 와 같은 구체적인 클래스는
+`Object` 가 가지고 있는 `toString()` 메서드를 오버라이딩 할 수 있다. 따라서 `print(Object obj)` 메서
+드는 `Dog` , `Car` 와 같은 구체적인 타입에 의존(사용)하지 않고, 추상적인 `Object` 타입에 의존하면서 런타임에
+각 인스턴스의 `toString()` 을 호출할 수 있다.
+
+<OCP 원칙**>
+기본편에서 학습한 OCP 원칙을 떠올려보자.
+**Open**: 새로운 클래스를 추가하고, `toString()` 을 오버라이딩해서 기능을 확장할 수 있다.
+**Closed**: 새로운 클래스를 추가해도 `Object` 와 `toString()` 을 사용하는 클라이언트 코드인
+            `ObjectPrinter` 는 변경하지 않아도 된다.
+
+다형적 참조, 메서드 오버라이딩, 그리고 클라이언트 코드가 구체적인 `Car` , `Dog` 에 의존하는 것이 아니라 추상적인
+`Object` 에 의존하면서 OCP 원칙을 지킬 수 있었다. 덕분에 새로운 클래스를 추가하고 `toString()` 메서드를 새롭
+게 오버라이딩해서 기능을 확장할 수 있다. 그리고 이러한 변화에도 불구하고 클라이언트 코드인 `ObjectPrinter` 는
+변경할 필요가 없다.
+
+ObjectPrinter` 는 모든 타입의 부모인 `Object` 를 사용하고, `Object` 가 제공하는 `toString()` 메서드만 사용한다.
+따라서 `ObjectPrinter` 를 사용하면 세상의 모든 객체의 정보(`toString()` )를 편리하게 출력할 수 있다.
+
+**자바 언어는 객체지향 언어 답게 언어 스스로도 객체지향의 특징을 매우 잘 활용한다.**
+우리가 지금까지 배운 `toString()` 메서드와 같이, 자바 언어가 기본으로 제공하는 다양한 메서드들은 개발자가
+필요에 따라 오버라이딩해서 사용할 수 있도록 설계되어 있다.
+
+**참고 - 정적 의존관계 vs 동적 의존관계**
+정적 의존관계는 컴파일 시간에 결정되며, 주로 클래스 간의 관계를 의미한다. 앞서 보여준 클래스 의존 관계 그림
+이 바로 정적 의존관계이다. 쉽게 이야기해서 프로그램을 실행하지 않고, 클래스 내에서 사용하는 타입들만 보면
+쉽게 의존관계를 파악할 수 있다.
+
+동적 의존관계는 프로그램을 실행하는 런타임에 확인할 수 있는 의존관계이다.
+앞서 `ObjectPrinter.print(Object obj)` 에 인자로 어떤 객체가 전달 될 지는 프로그램을 실행해봐야 알 수 있다.
+어떤 경우에는 `Car` 인스턴스가 넘어오고, 어떤 경우에는 `Dog` 인스턴스가 넘어온다.
+이렇게 런타임에 어떤 인스턴스를 사용하는지를 나타내는 것이 동적 의존관계이다.
+참고로 단순히 의존관계 또는 어디에 의존한다고 하면 주로 정적 의존관계를 뜻한다.
+
+예) `ObjectPrinter` 는 `Object` 에 의존한다.
+
+<equals()>
+equals() - 1. 동일성과 동등성
+`Object` 는 동등성 비교를 위한 `equals()` 메서드를 제공한다.
+
+자바는 두 객체가 같다라는 표현을 2가지로 분리해서 제공한다.
+**동일성(Identity)**: `==` 연산자를 사용해서 두 객체의 참조가 동일한 객체를 가리키고 있는지 확인
+**동등성(Equality)**: `equals()` 메서드를 사용하여 두 객체가 논리적으로 동등한지 확인
+
+**단어 정리**
+"동일"은 완전히 같음을 의미한다. 반면 "동등"은 같은 가치나 수준을 의미하지만 그 형태나 외관 등이 완전히 같지는 않을 수 있다.
+
+쉽게 이야기해서 동일성은 물리적으로 같은 메모리에 있는 객체 인스턴스인지 참조값을 확인하는 것이고, 동등성은 논리적으로 같은지 확인하는 것이다.
+동일성은 자바 머신 기준이고 메모리의 참조가 기준이므로 물리적이다. 반면 동등성은 보통 사람이 생각하는 논리적인
+기준에 맞추어 비교한다.
+
+예를 들어 같은 회원 번호를 가진 회원 객체가 2개 있다고 가정해보자.
+
+User a = new User("id-100") //참조 x001
+User b = new User("id-100") //참조 x002
+
+이 경우 물리적으로 다른 메모리에 있는 다른 객체이지만, 회원 번호를 기준으로 생각해보면 논리적으로는 같은 회원으로 볼 수 있다.
+(주민등록번호가 같다고 가정해도 된다.)
+따라서 동일성은 다르지만, 동등성은 같다.
+
+문자의 경우도 마찬가지이다.
+```java
+String s1 = "hello";
+String s2 = "hello";
+```
+이 경우 물리적으로는 각각의 "hello" 문자열이 다른 메모리에 존재할 수 있지만, 논리적으로는 같은 `"hello"` 라는 문자열이다.
+(사실 이 경우 자바가 같은 메모리를 사용하도록 최적화 한다. 이 부분은 뒤에서 다룬다.)
+
+`Object` 가 기본으로 제공하는 `equals()` 는 `==`으로 동일성 비교를 제공한다.
+
+동등성이라는 개념은 각각의 클래스 마다 다르다. 어떤 클래스는 주민등록번호를 기반으로 동등성을 처리할 수 있고,
+어떤 클래스는 고객의 연락처를 기반으로 동등성을 처리할 수 있다. 어떤 클래스는 회원 번호를 기반으로 동등성을 처리할수 있다.
+따라서 동등성 비교를 사용하고 싶으면 `equals()` 메서드를 재정의(오버라이드)해야 한다.
+그렇지 않으면 `Object` 는 동일성 비교를 기본으로 제공한다.
+
+<정확한 equals() 구현>
+앞서 `UserV2` 에서 구현한 `equals()` 는 이해를 돕기 위해 매우 간단히 만든 버전이고, 실제로 정확하게 동작하려면
+다음과 같이 구현해야 한다. 정확한 `equals()` 메서드를 구현하는 것은 생각보다 쉽지 않다.
+IntelliJ를 포함한 대부분의 IDE는 정확한 `equals()` 코드를 자동으로 만들어준다.
+
+generator 단축키: `⌘N` (macOS) / `Alt+Insert` (Windows/Linux)
+
+
+**정리**
+-참고로 동등성 비교가 항상 필요한 것은 아니다. 동등성 비교가 필요한 경우에만 `equals()` 를 재정의하면 된다.
+-`equals()` 와 `hashCode()` 는 보통 함께 사용된다. 이 부분은 뒤에 컬렉션 프레임워크에서 자세히 설명한다.
+정리
+<Object의 나머지 메서드>
+`clone()`=>객체를 복사할 때 사용한다. 잘 사용하지 않으므로 다루지 않는다.
+`hashCode()`=> `equals()` 와 `hashCode()` 는 종종 함께 사용된다. `hashCode()` 는 뒤에 컬렉션 프레임워크에서 자세히 설명한다.
+`getClass()` => 뒤에 `Class` 에서 설명한다.
+`notify()` , `notifyAll()` , `wait()` 멀티쓰레드용 메서드이다. 멀티쓰레드에서 다룬다.
+
